sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: Unmatched closing brace '}' ignored here
      }
      ^AlgInsertionSort:12: error: ')' expected but '}' found.
     	setValeur(j,temp) }}} 
                           ^